--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
         ]
     },
     "dependencies": {
+        "@types/express": "^4.11.1",
+        "body-parser": "^1.18.3",
         "electron-webrtc": "^0.3.0",
         "express": "^4.16.3",
+        "nanoid": "^1.0.2",
         "oni-types": "^0.0.8",
         "request": "^2.87.0",
         "request-promise": "^4.2.2",
         "simple-peer": "^9.1.2"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.17.0",
         "@types/jest": "^22.2.3",
+        "@types/nanoid": "^1.0.0",
+        "@types/simple-peer": "^6.1.4",
         "husky": "^0.14.3",
         "jest": "^23.1.0",
         "prettier": "^1.13.3",
