Factor webrtc out to be injected

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@types/body-parser": "^1.17.0",
         "@types/jest": "^22.2.3",
         "@types/nanoid": "^1.0.0",
+        "@types/request": "^2.47.0",
+        "@types/request-promise": "^4.1.41",
         "@types/simple-peer": "^6.1.4",
         "husky": "^0.14.3",
         "jest": "^23.1.0",
