--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/express": "^4.11.1",
         "@types/minimist": "^1.2.0",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.4",
         "electron-webrtc": "^0.3.0",
         "express": "^4.16.3",
         "minimist": "^1.2.0",
@@ -45,6 +46,7 @@
     },
     "devDependencies": {
         "@types/body-parser": "^1.17.0",
+        "@types/cors": "^2.8.4",
         "@types/jest": "^22.2.3",
         "@types/nanoid": "^1.0.0",
         "@types/node": "^10.1.4",
