--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "minimist": "^1.2.0",
         "nanoid": "^1.0.2",
         "oni-types": "^0.0.8",
+        "outrun-game-core": "^0.0.1",
         "request": "^2.87.0",
         "request-promise": "^4.2.2",
         "simple-peer": "^9.1.2",
