--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@types/express": "^4.11.1",
         "@types/minimist": "^1.2.0",
+        "@types/react": "^16.3.16",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
         "electron-webrtc": "^0.3.0",
@@ -40,6 +41,7 @@
         "nanoid": "^1.0.2",
         "oni-types": "^0.0.8",
         "outrun-game-core": "^0.0.1",
+        "react": "^16.4.0",
         "request": "^2.87.0",
         "request-promise": "^4.2.2",
         "simple-peer": "^9.1.2",
